# searcher

./: .gitignore  Dockerfile  Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml  example_output.txt  pyproject.toml  search_results.json
src/searcher/: main.py  search.py
static/: index.html
templates/: results.html
tests/: test_main.py  test_search.py
