[project]
name = "searcher"
version = "0.1.0"
description = "A frontend that serves Google Custome Search Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.5",
    "redis>=5.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
