[project]
name = "searcher"
version = "0.1.0"
description = "A frontend that serves Google Custome Search Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.5",
    "redis>=5.2.1",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "respx>=0.22.0",
    "pytest-asyncio>=0.25.3",
]
